<resources>
    <string name="app_name">NFC X-Change</string>
    <string name="title_activity_login">Sign in</string>
    <string name="seConnecter">Se connecter</string>
    <string name="logout">Se deconnecter</string>
    <string name="seDeconnecter">Se déconnecter</string>
    <string name="sInscrire">S\'inscrire</string>
    <string name="patientez">Veuillez Patienter</string>
    <string name="mailAddress">Adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="verificationCon">Connexion non établie! Verifier votre connexion.</string>
    <string name="estVide">est vide!</string>
    <string name="en_cours_data">En attente des données...</string>
    <string name="rechercher">Rechercher</string>
    <string name="selectionner">Veuillez Choisir</string>
    <string name="en_cours">Recherche en cours ...</string>
    <string name="mot_cle">Mot clé</string>
    <string name="list_type_service">Type de Service</string>
    <string name="price">Prix</string>
    <string name="rangePrice">Prix</string>
    <string name="min_price">0</string>
    <string name="max_price">100</string>
    <string name="price_currency"></string>
    <string name="max_price_currency">100</string>
    <string name="not_impl">Recherche non implementée sur cette section</string>
    <string name="navigation_drawer_open">Ouvrir navigation drawer</string>
    <string name="navigation_drawer_close">Fermer navigation drawer</string>
    <string name="list_product">Liste des services</string>
    <string name="my_shop">Mon panier</string>
    <string name="my_request">Mes demandes</string>
    <string name="my_product">Mes services</string>
    <string name="settings">Parametre</string>
    <string name="my_tokens">Mes jetons</string>
    <string name="my_profile">Mon profil</string>
    <string name="language">Language</string>
    <string name="loading">Bienvenue</string>
    <string name="version">Version 1.0</string>
    <string name="create_title">Créer un nouveau Service</string>
    <string name="waiting_transaction">Transaction en cours...</string>
    <string name="service_list_title">Liste des Services</string>
    <string name="service_detail_title">Les détails du produit</string>
    <string name="detail">Détails</string>
    <string name="all">Tout</string>
    <string name="buy">Buy</string>
    <string name="similary">Les services similaires</string>
    <string name="service_updated">Produit ou service mis a jour</string>
    <string name="new_service">Ajouter un nouveau produit ou service</string>
    <string name="xchange">X-Change</string>
    <string name="update_service">Mis a jour de produit</string>
    <string name="update_service_no_data">Veuillez selectionner un produit a mettre a jour</string>
    <string name="valider_achat">Veuillez selectionner un produit</string>
    <string name="success_msg">Produit ajouté avec succès</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vel diam a turpis condimentum fringilla. Pellentesque quis consequat mauris. Aenean placerat pellentesque tortor, porttitor rhoncus nibh varius eu. Sed dictum nulla metus,</string>
    <string name="service_name">Nom du service</string>
    <string name="date_publication_name">Date de publication</string>
    <string name="description">Description</string>
    <string name="update_text">Mettre a jour</string>
    <string name="upload_file">Choisir image</string>
    <string name="validate_request">Valider les demandes</string>
    <string name="delete">Supprimer</string>
    <string name="cancel">Annuler</string>
    <string name="price_">Prix :</string>
    <string name="validate">Valider</string>
    <string name="back">Retour</string>
    <string name="my_product_title">Tes produits</string>
    <string name="xchange_process">Proceder a X-Change</string>
    <string name="buy_process">Proceder a l\'achat</string>
    <string name="pending">En attente...</string>
    <string name="go_authentificate">L\'utilisateur ne correspond pas. Veuillez vous reconnecter avec un bon utilisateur</string>
    <string name="langue">Choisir votre langue</string>
    <string name="francais">Francais</string>
    <string name="malgache">Malgache</string>
    <string name="anglais">Anglais</string>
    <string name="get_phone">S\'il vous plait,veuillez rapprocher vos téléphone</string>
    <string name="payment_process">Procédure de Paiement</string>
    <string name="transaction_ok">La transaction a été éffectuée avec succès</string>
    <string name="buy_title">Liste des achats</string>
    <string name="Xchange_title">Liste des X-Change</string>
</resources>