<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_create"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardCornerRadius="10dp"
            card_view:contentPadding="10dp"
            app:cardElevation="9dp"
            android:elevation="8dp"
            android:layout_margin="10dp"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_title"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_type_service"/>
                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spinner_type_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/list_type_service"
                    android:layout_marginBottom="@dimen/value_margin"
                    app:ms_hintColor="@color/colorPrimary"
                    app:ms_arrowColor="@color/colorPrimary"
                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/service_name_create"
                        android:hint="@string/service_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColorHint="@color/colorPrimary"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/service_description_create"
                        android:hint="@string/description"
                        android:inputType="text"
                        android:textColorHint="@color/colorPrimary"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/service_publication_create"
                        android:hint="@string/date_publication_name"
                        android:inputType="text"
                        android:textColorHint="@color/colorPrimary"
                        />
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:layout_gravity="left"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:text="@string/max_price"
                        android:gravity="right"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:id="@+id/price_text_create"/>

                </LinearLayout>
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:id="@+id/price_create"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_file"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:background="@color/colorPrimaryDark"
                    android:layout_gravity="bottom"
                    android:id="@+id/button_upload_file"
                    android:layout_marginTop="@dimen/value_margin"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_text"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:background="@color/colorPrimary"
                    android:layout_gravity="bottom"
                    android:id="@+id/button_create"
                    android:layout_marginTop="@dimen/value_margin"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>