<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipeToRefresh">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/validate_request"
            android:id="@+id/button_top"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy_title"
            android:textAllCaps="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/nodata1"
            android:id="@+id/no_data"
            android:visibility="gone"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Xchange_title"
            android:textAllCaps="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view1"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_margin"
            android:id="@+id/loading"/>
    </LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>