<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mg.mbds.nfcx_change.Activity.LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/xchange_splash2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/blurBackground1"
        >
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="9dp"
            android:elevation="8dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="@dimen/value_margin">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/logo_xchange_2"
                    android:id="@+id/imageLogin"
                    android:layout_marginBottom="@dimen/value_margin"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/mailAddress"
                        android:hint="@string/mailAddress"
                        android:inputType="text"
                        android:maxLines="1"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/password"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:layout_marginBottom="20dp"
                        />
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seConnecter"
                    android:id="@+id/seconnecter"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorPrimary"
                    android:layout_marginBottom="5dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sInscrire"
                    android:id="@+id/sinscrire"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorPrimaryDark"/>

                <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBarLogin"
                    android:visibility="invisible"/>

                <TextView
                    android:text="@string/patientez"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/patientez"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    />
            </LinearLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>
