<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp"
        android:animateLayoutChanges="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:text="1"
                android:orientation="vertical"
                android:padding="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="75dip"
                        android:layout_height="75dip"
                        android:background="@drawable/rounduser"
                        android:layout_gravity="center"
                        >
                        <com.makeramen.roundedimageview.RoundedImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/image_user_buy"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="15dip"
                            android:layout_marginTop="10dip"
                            android:scaleType="centerCrop"
                            android:src="@drawable/user"
                            app:riv_corner_radius="30dip"
                            app:riv_border_width="2dip"
                            app:riv_border_color="#ffffff"/>
                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_name_buy"
                        android:text="John Smith"
                        android:gravity="center"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="2"
                android:orientation="vertical"
                android:paddingTop="@dimen/value_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/title_buy"
                    android:text="Title A"
                    android:textSize="20dp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3£"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/price_buy"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:orientation="vertical"
                android:padding="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/noimg"
                        android:id="@+id/product_img_buy"
                        android:layout_weight="8"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:src="@drawable/close"
                    android:id="@+id/delete"
                    android:layout_gravity="center"
                    />
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkboxBuy"
                    android:layout_centerVertical="true"
                    />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pending"
            android:id="@+id/pending"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:id="@+id/supprimer_layout"
            android:visibility="gone"
            android:animateLayoutChanges="true">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:id="@+id/delete_final"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:id="@+id/cancel"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>